@startuml ("person")

entity "person.countries" as countries {
  + id INT <<PK>>
  --
  created TIMESTAMP
  updated TIMESTAMP
  name VARCHAR(32)
  alpha2 VARCHAR(2)
  alpha3 VARCHAR(3)
  status VARCHAR(32)
}

entity "person.addresses" as addresses {
  + id UUID <<PK>>
  --
  created TIMESTAMP
  updated TIMESTAMP
  country_id INT <<FK>>
  address VARCHAR(128)
  zip_code VARCHAR(32)
  archived TIMESTAMP
  city VARCHAR(32)
  state VARCHAR(32)
}

entity "person.users" as users {
  + id UUID <<PK>>
  secret_key VARCHAR(32)
  --
  created TIMESTAMP
  updated TIMESTAMP
  first_name VARCHAR(32)
  last_name VARCHAR(32)
  verified_at TIMESTAMP
  archived_at TIMESTAMP
  status VARCHAR(64)
  filled BOOLEAN
  address_id UUID <<FK>>
}

entity "person.merchants" as merchants {
  + id UUID <<PK>>
  --
  creator_id UUID <<FK>>
  created TIMESTAMP
  updated TIMESTAMP
  company_name VARCHAR(32)
  company_id VARCHAR(32)
  email VARCHAR(32)
  phone_number VARCHAR(32)
  verified_at TIMESTAMP
  archived_at TIMESTAMP
  status VARCHAR(32)
  filled BOOLEAN
}

entity "person.merchant_members" as merchant_members {
  + id UUID <<PK>>
  --
  user_id UUID <<FK>>
  created TIMESTAMP
  updated TIMESTAMP
  merchant_id UUID <<FK>>
  member_role VARCHAR(32)
  status VARCHAR(32)
}

entity "person.individuals" as individuals {
  + id UUID <<PK>>
  --
  user_id UUID <<FK>>
  created TIMESTAMP
  updated TIMESTAMP
  passport_number VARCHAR(32)
  phone_number VARCHAR(32)
  email VARCHAR(32)
  verified_at TIMESTAMP
  archived_at TIMESTAMP
  status VARCHAR(32)
}

entity "person.verification_statuses" as verification_statuses {
  + id UUID <<PK>>
  --
  created TIMESTAMP
  updated TIMESTAMP
  profile_id UUID <<FK>>
  profile_type VARCHAR(32)
  details VARCHAR(255)
  verification_status VARCHAR(32)
}

entity "person.profile_history" as profile_history {
  + id UUID <<PK>>
  --
  created TIMESTAMP
  profile_id UUID <<FK>>
  profile_type VARCHAR(32)
  reason VARCHAR(255)
  comment VARCHAR(255)
  changed_values VARCHAR(1024)
}

entity "person.merchant_members_invitations" as merchant_members_invitations {
  + id UUID <<PK>>
  --
  created TIMESTAMP
  expires TIMESTAMP
  merchant_id UUID <<FK>>
  first_name VARCHAR(32)
  last_name VARCHAR(32)
  email VARCHAR(32)
  status VARCHAR(32)
}

countries ||--o{ addresses
addresses ||--|| users
users ||--|| merchants
merchants }o--o{ merchant_members
users ||--|| individuals
users ||--|| verification_statuses
users ||--o{ profile_history
merchants }o--o{ merchant_members_invitations

@enduml
